@@ -12,8 +12,8 @@
 #           - transcode bluray to matroska container    #
 #           - transcode dvd to multiple formats         #
 #           - Integration of user-functions             #
-# VERSION : 0.6.11                                      #
-# DATE    : 07-21-10                                    #
+# VERSION : 0.6.12                                      #
+# DATE    : 07-26-10                                    #
 # STATE   : Alpha 10                                    #
 # LICENCE : GPL 3.0                                     #
 #########################################################
@@ -38,8 +38,8 @@ __url__ 		= "http://code.google.com/p/swiss-army-knife/"
 __svn_url__ 		= "https://swiss-army-knife.googlecode.com/svn/trunk"
 __platform__ 		= "xbmc media center, [LINUX]"
 __date__ 		= "07-21-2010"
-__version__ 		= "0.6.11"
-__code_name__           = "300"
+__version__ 		= "0.6.12"
+__code_name__           = "10000 BC"
 __XBMC_Revision__ 	= "31953"
 __index_config__        = 50 
  
